# rkllm-py-bind

./: .clang-format  .gitignore  CMakeLists.txt  config.cmake  readme.md  readme_en.md  setup.py
inc/: rkllm.h  rkllmDatautils.h  rkllmWrapperBase.h
python/: __init__.py  example.py  test.py
python/config/: pyproject.toml
python/example/: example.py
python/module/: __init__.py  py.typed  rkllm.pyi
src/: bind.cpp
test/: testMain.cpp
